force-app/main/default/objects/Social__c.object
<CustomObject>
    <description>Social media handles of a person (Contact)</description>
    <fields>
        <fullName>Channel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Channel lookup field for the Contact Point object record</description>
        <label>Channel</label>
        <referenceTo>Channel__c</referenceTo>
        <relationshipName>Social_Handles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Classification__c</fullName>
        <description>Defines how the social handle is classified, i.e. in which context it is used.</description>
        <inlineHelpText>Please provide a classification of the social handle.</inlineHelpText>
        <label>Classification</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Point_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Relationship to Contact.</description>
        <inlineHelpText>Please provide the contact record this social handle is linked to.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Social_Handles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This defines the date until the social handle is valid for.</description>
        <inlineHelpText>Please provide the date the social handle is valid through, or leave it empty if it is not known or not end dated.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_System_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Unique ID used to identify records in an external system.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID used to identify records in an external system.</inlineHelpText>
        <label>External System ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether a social handle is active, usually when end date is in the past or the start date is in the future. This value Is automatically (by a scheduled process) set to &quot;false&quot; if End_Date__c is populated and in the past or the Start_Date__c is in the future.
If manually set/changed to &quot;True&quot; (&quot;False&quot;), then the End_Date__c is automatically removed (added with the current date).</description>
        <inlineHelpText>Please indicate whether the soical handle is active or not (inactive).</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global primary (by Contact), as such only a single Social__c record can be flagged as primary per Contact Lookup.
If selected manually, all other records (for the Contact) will be marked as non-primary (false)
If none are selected, the entry with the latest Start_Date__c will be automatically marked as primary.</description>
        <inlineHelpText>Please indicate whether the social handle is primary for this Contact.</inlineHelpText>
        <label>Is Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_UID__c</fullName>
        <description>System Field - Unique Key Combination field</description>
        <externalId>true</externalId>
        <inlineHelpText>System Field - Unique Key Combination field</inlineHelpText>
        <label>Key UID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Source of the social handle.</description>
        <inlineHelpText>Please enter source of the social handle, i.e. how were the details obtained.</inlineHelpText>
        <label>Source</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contact_Point_Source</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>The date the social handle is valid from.</description>
        <inlineHelpText>Please provide a date indicating the valid from for the social handle</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of the social handle.</description>
        <inlineHelpText>Please enter the social handle type</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LinkedIn</fullName>
                </value>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>WeChat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Url__c</fullName>
        <description>URL to the social profile</description>
        <inlineHelpText>Please enter the URL to the social profile.</inlineHelpText>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Social Handle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_records</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Is_Primary__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Classification__c</columns>
        <filterScope>Everything</filterScope>
        <label>All records</label>
    </listViews>
    <nameField>
        <label>Social Handle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Handles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_create_Callista_records</fullName>
        <active>true</active>
        <description>End users cannot create or update a record with the source field set to &quot;Callista&quot; as these are created through integration only.</description>
        <errorConditionFormula>AND(
  NOT(CONTAINS($User.Username, &apos;autoproc@&apos;)),
  $Profile.Name &lt;&gt; &apos;System Administrator&apos;,
  OR(
    AND( ISNEW(), ISPICKVAL(Source__c, &apos;Callista&apos;) ),
    AND( ISCHANGED(Source__c), ISPICKVAL(Source__c, &apos;Callista&apos;) )
  ),
  NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c)
)</errorConditionFormula>
        <errorDisplayField>Source__c</errorDisplayField>
        <errorMessage>End users cannot create or update a record with the source field set to &quot;Callista&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_date_must_not_be_older</fullName>
        <active>true</active>
        <description>Ensures that the start date is not older than the end date</description>
        <errorConditionFormula>AND(
	if (!ISBLANK(End_Date__c), Start_Date__c &gt; End_Date__c, FALSE), 
        NOT($Setup.Bypass_Mute_Request__c.Bypass_All_Validation_Rules__c))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>The end date must be equal or later than the start date.</errorMessage>
    </validationRules>
</CustomObject>